# aoc-2023

./: .gitattributes.bak  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: poetry.yml
aoc_2023/: __init__.py  common.py  from_prompt.py
aoc_2023/day_01/: a.py  b.py  from_prompt.py  input.txt  solver.py
aoc_2023/day_02/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_03/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_04/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_05/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_06/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_07/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_08/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_09/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_10/: a.py  b.py  common.py  from_prompt.py  input.txt
aoc_2023/day_11/: a.py  b.py  common.py  from_prompt.py  input.txt
aoc_2023/day_12/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_13/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_14/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_15/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_16/: a.py  b.py  common.py  from_prompt.py  input.txt  parser.py
aoc_2023/day_17/: a.py  (+5 more)
tests/: test_wat.py
utils/: create_files.py  file_data.py  submit.py
(+77 files in other folders)
